Corrected the image path for the homestead.css file.

--- a/css/homestead.css
+++ b/css/homestead.css
@@ -56,6 +56,6 @@ h2 {
     }
 
       canvas {
-        background-image: url("images/dirt.png");
+        background-image: url("../images/dirt.png");
         position: absolute;
       }
