--- a/css/controls.css
+++ b/css/controls.css
@@ -28,7 +28,7 @@
 }
 
 .controls-stats label {
-	border-right: 1px solid #;
+	border-right: 1px solid rgba(255, 255, 255, .25);
 	display: inline-block;
 	width: 4rem;
 }
